--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "fourohtwo.js",
   "dependencies": {
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "node-fetch": "^2.6.1"
   },
