--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "main": "fourohtwo.js",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "boltwall": "^5.2.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "node-fetch": "^2.6.1"
