--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "dotenv": "^8.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "node-fetch": "^2.6.1"
+    "express-session": "^1.17.2",
+    "node-fetch": "^2.6.1",
+    "passport": "^0.4.1",
+    "passport-lnurl-auth": "^1.3.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
