--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "express-session": "^1.17.2",
     "node-fetch": "^2.6.1",
     "passport": "^0.4.1",
-    "passport-lnurl-auth": "^1.3.0"
+    "passport-lnurl-auth": "^1.3.0",
+    "uuid": "^8.3.2"
   },
   "scripts": {
+    "dev": "nodemon fourohtwo",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "MIT",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "nodemon": "^2.0.15"
+  }
 }
